# minimal-engine-cpp

./: .gitignore  CMakeLists.txt  README.md  install_deps.sh
.github/workflows/: build.yml
assets/icons/: sample.ico.rc
libs/raylib/: CMakeLists.txt
src/: main.cpp
